--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -11,8 +11,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: action/checkout@v1
-      - uses: action/setup-node@v1
+      - uses: actions/checkout@v1
+      - uses: actions/setup-node@v1
       with:
         node-version: 18.x
     
