--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -7,13 +7,17 @@ on:
 
 
 jobs:
-  checks:
+  build-publish:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v1
-      - uses: actions/setup-node@v1
+
+      - name: Use Node.js 18.x
+      uses: actions/setup-node@v2
       with:
-        node-version: 18.x
+        node-version: '18.x'
+     
     
       - name: Build
         run: cd client && npm install && npm run build
