--- a/.github/workflows/production.yaml
+++ b/.github/workflows/production.yaml
@@ -1,41 +1,40 @@
-name: Build
+name: Deploy Frontend to Netlify
 
 on:
   push:
-    branches: 
-      - master
-
+    branches:
+      - master # or any branch you want to deploy from
 
 jobs:
-  build-publish:
+  build-and-deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v1
+      - name: Checkout Repository
+        uses: actions/checkout@v2
 
-      - name: Use Node.js 18.x
+      - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-             node-version: '18.x'
-                
-      - name: Install
-        run: npm install 
-        working-directory: ./client   
-      
-      - name: Build 
+          node-version: "14" # Adjust as needed
+
+      - name: Install Frontend Dependencies
+        run: npm install
+        working-directory: ./client # Adjust as needed
+
+      - name: Build Frontend
         run: npm run build
-        working-directory: ./client
-      
-      - name: Publish
-        uses: nwtgck/actions-netlify@v2.0
+        working-directory: ./client # Adjust as needed
+
+      - name: Deploy to Netlify
+        uses: nwtgck/actions-netlify@v1.2
         with:
-           publish-dir: './client/build'
-           production-deploy: true
-           github-token: ${{ secrets.GITHUB_TOKEN }}
-           deploy-message: "Deploy from GitHub Actions"
-           enable-pull-request-comment: false
-           enable-commit-comment: false
-           overwrites-pull-request-comment: true
-         env:
-           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
-           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+          publish-dir: "./client/build" # Adjust as needed
+          production-deploy: true
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          deploy-message: "Deploy from GitHub Actions"
+          enable-pull-request-comment: false
+          enable-commit-comment: false
+          overwrites-pull-request-comment: false
+        env:
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
